--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Beaches of Goa</title>
 </head>
@@ -16,7 +16,7 @@
     </header>
     <div class="container">
         <section class="card">
-            <img src="images/img_1.png" alt="">
+            <img src="images/1.jpg" alt="" class="card_img">
             <div>
                 <h3> Vagator Beach</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -27,7 +27,7 @@
             </div>
         </section>
         <section class="card" data-aos="fade-left">
-            <img src="images/img_2.png" alt="">
+            <img src="images/2.jpg" alt="" class="card_img">
             <div>
                 <h3>Majorda Beach</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -38,7 +38,7 @@
             </div>
         </section>
         <section class="card" data-aos="fade-right">
-            <img src="images/img_3.png" alt="">
+            <img src="images/3.jpg" alt="" class="card_img">
             <div>
                 <h3>Anjuna Beach</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -49,7 +49,7 @@
             </div>
         </section>
         <section class="card" data-aos="fade-left">
-            <img src="images/img_4.png" alt="">
+            <img src="images/4.jpg" alt="" class="card_img">
             <div>
                 <h3>Arambol Beach</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -60,7 +60,7 @@
             </div>
         </section>
         <section class="card" data-aos="fade-right">
-            <img src="images/img_5.png" alt="">
+            <img src="images/5.jpg" alt="" class="card_img">
             <div>
                 <h3>Morjim Beach</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -73,11 +73,8 @@
     </div>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init({
-        offset: 200,
-        duration:1000 // offset (in px) from the original trigger point
-    });
-  </script>
-</body>
+    <script>
+      AOS.init();
+    </script>
+</body> class="card_img"
 </html>
